# beefunding

./: pyproject.toml  requirements.txt
.github/workflows/: main_beefund.yml  main_beefunding.yml
crowdfunding/: settings.py  urls.py
funding/migrations/: 0001_initial.py  0002_campania_beneficiario.py  0003_formapago_fecha_registro_formapago_fecha_ult_act.py  0004_alter_beneficiario_fecha_nacimiento.py  0005_remove_formapago_usuarios_alter_campania_descripcion_and_more.py  0006_formapagousuario.py  0007_beneficiario_ciudad.py  0008_alter_formapagousuario_options_and_more.py  0009_historialpago.py  0010_historialpago_fecha_registro_and_more.py  0011_formapago_iamgen.py  0012_rename_iamgen_formapago_imagen.py  0013_historialpago_campania.py  0014_campania_estado.py  0015_formapago_estado.py  0016_solcampania.py  0017_remove_solcampania_categorias_solcampania_categorias.py
